KSBWI-189: Fixed text overflowing some containers in mobile devices

--- a/src/scss/widget/_widget-theme.scss
+++ b/src/scss/widget/_widget-theme.scss
@@ -14,7 +14,7 @@
 }
 
 .kw-event-path {
-   width: 100%;
+   width: 80%;
 
    .kw-path {
       @include flex(0 1 auto);
@@ -67,5 +67,3 @@
    top: 50%;
    width: 6px;
 }
-
-
